--- a/main.html
+++ b/main.html
@@ -8,17 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1><center>My Playlist</center></h1>
+	<h1>My Playlist</h1>
 	<div class="player_one">
-		<a href="https://www.youtube.com/watch?v=kd-6aw99DpAhttps://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">Song 1</a><br>
-		<a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">Song 2</a><br>
-		<a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank">Song 3</a><br>
-		<a href="https://www.youtube.com/watch?v=puKD3nkB1h4" target="_blank">Song 4</a><br>
-		<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">Song 5</a><br>
+		<ul>
+			<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpAhttps://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">Song 1</a></li>
+			<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">Song 2</a></li>
+			<li><a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank">Song 3</a></li>
+			<li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4" target="_blank">Song 4</a></li>
+			<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">Song 5</a></li>
+		</ul>
 	</div>
 	<h2><center>Now Playing...</cente></center></h2>
 	<div class="player_two">
 		<video src="https://www.w3schools.com/tags/movie.mp4" controls ></video>
+		<h2><center>MP3 songs</center></h2>
 		<audio src="https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
 	</div>
 		
