--- a/main.html
+++ b/main.html
@@ -18,11 +18,15 @@
 			<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">Song 5</a></li>
 		</ul>
 	</div>
-	<h2><center>Now Playing...</cente></center></h2>
+	<h2>Now Playing...</h2>
 	<div class="player_two">
-		<video src="https://www.w3schools.com/tags/movie.mp4" controls ></video>
-		<h2><center>MP3 songs</center></h2>
-		<audio src="https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
+		<video  >
+			<source src="https://www.w3schools.com/tags/movie.mp4" controls>
+		</video>
+		<h2>MP3 songs</h2>
+		<audio >
+			<source src="https://www.pagalworld.com.se/files/download/id/64630" controls>
+		</audio>
 	</div>
 		
     <script type="text/javascript" src="./script.js">
