--- a/main.html
+++ b/main.html
@@ -20,12 +20,12 @@
 	</div>
 	<h2>Now Playing...</h2>
 	<div class="player_two">
-		<video  >
-			<source src="https://www.w3schools.com/tags/movie.mp4" controls>
+		<video controls>
+			<source src="https://www.w3schools.com/tags/movie.mp4" >
 		</video>
 		<h2>MP3 songs</h2>
-		<audio >
-			<source src="https://www.pagalworld.com.se/files/download/id/64630" controls>
+		<audio controls>
+			<source src="https://www.pagalworld.com.se/files/download/id/64630" >
 		</audio>
 	</div>
 		
