--- a/main.html
+++ b/main.html
@@ -21,11 +21,11 @@
 	<h2>Now Playing...</h2>
 	<div class="player_two">
 		<video controls>
-			<source src="https://www.w3schools.com/tags/movie.mp4" >
+			<source src="https://www.w3schools.com/tags/movie.mp4" type="mp4">
 		</video>
 		<h2>MP3 songs</h2>
 		<audio controls>
-			<source src="https://www.pagalworld.com.se/files/download/id/64630" >
+			<source src="https://www.pagalworld.com.se/files/download/id/64630" type="mp3" >
 		</audio>
 	</div>
 		
